--- a/src/slider.css
+++ b/src/slider.css
@@ -2,11 +2,11 @@
   height: 40px;
   border: 2px solid black;
   border-radius: 20px;
-  /* background-color:var(--red); */
+  background-color:#d8c3a5;
 }
 
 .thumb {
-  background-color:var(--red);
+  background-color:#e85a4f;
   cursor: pointer;
   width: 40px;
   height: 40px;
@@ -18,5 +18,5 @@
 }
 
 .slider.break .thumb {
-    background-color: var(--green);
+    background-color: #e85a4f;
 }
